--- a/src/pages/testA/index/index.scss
+++ b/src/pages/testA/index/index.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+@import '@/common/config.scss';
 page {
   background-color: white;
   padding: 14px;
@@ -19,6 +21,7 @@ page {
 
 .title,
 .desc {
+  color: $default-primary;
   text-align: center;
   font-size: 32px;
 }
@@ -26,7 +29,7 @@ page {
 .desc {
   margin: 20px 0;
   font-size: 28px;
-  color: rgba(0, 0, 0, .85);
+  color: $default-primary;
 }
 
 .list {
@@ -53,4 +56,5 @@ page {
   background-color: transparent;
   border-radius: 2px;
   margin-top: 20px;
+  color: $default-primary;
 }
