--- a/src/pages/testA/index/index.scss
+++ b/src/pages/testA/index/index.scss
@@ -19,24 +19,24 @@ page {
   margin: 0 auto;
 }
 
-.title,
 .desc {
   color: $default-primary;
+  margin: 20px 0;
+  font-size: 28px;
+}
+
+.title,
+.desc {
+  //继承.desc
+  @extend .desc;
   text-align: center;
   font-size: 32px;
 }
 
-.desc {
-  margin: 20px 0;
-  font-size: 28px;
-  color: $default-primary;
-}
-
 .list {
+  @include verticalCenter;
   padding: 24px 0;
   font-size: 32px;
-  display: flex;
-  align-items: center;
   border-color: rgba(51, 51, 51, .1);
   border-style: solid;
   border-width: 1px 0 1px 0;
