first to commit

--- a/src/common/config.scss
+++ b/src/common/config.scss
@@ -15,10 +15,10 @@ $default-onLine: linear-gradient(
 );
 //默认导航栏高度
 $default-statusBarHeight: 44px * 2;
-//默认导航栏高度
+//默认导航栏字体大小
 $default-statusBarText: 18px * 2;
 //默认页面左右边距
-$default-padding-LeftAndRight: 20px;
+$default-paddingLeftAndRight: 20px;
 //默认页面上边距
 $default-paddingTop: 24px;
 
