--- a/src/pages/testA/index/index.scss
+++ b/src/pages/testA/index/index.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import '@/common/config.scss';
 page {
-  background-color: white;
+  background-color: $default-background;
   padding: 14px;
   box-sizing: border-box;
   color: #333;
